valid sale house 1

--- a/src/main/webapp/seller/apply/houseSalePicUpload.xhtml
+++ b/src/main/webapp/seller/apply/houseSalePicUpload.xhtml
@@ -44,16 +44,23 @@
     <div class="setup-header setup-gift">
         <h1 class="subhead-heading">房屋图片上传</h1>
 
-        <ol class="steps steps-4">
+        <ol class="steps steps-7">
             <li class="complete">
                 <b:iconAwesome name="check" size="2x"/>
                 <strong class="step">产权:</strong>
                 产权验证
             </li>
+
+
+            <li class="complete">
+                <b:iconAwesome name="check" size="2x"/>
+                <strong class="step">委托:</strong>
+                委托信息
+            </li>
             <li class="complete">
                 <b:iconAwesome name="check" size="2x"/>
                 <strong class="step">描述:</strong>
-                房屋描述
+                房源描述
             </li>
             <li class="current">
                 <b:iconAwesome name="photo" size="2x"/>
@@ -63,8 +70,9 @@
             <li>
                 <b:iconAwesome name="university" size="2x"/>
                 <strong class="step">提交:</strong>
-                房源提交
+                提交房源
             </li>
+
         </ol>
     </div>
         <b:messages globalOnly="false" styleClass="top-messages"/>
